--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,14 @@ font-family: 'Montserrat', sans-serif;
 
 
 }
-
+footer a{
+    color: #ffffff;
+}
+ul a{
+    color:blue;
+}
 h1, footer {
-    background-color: #00920ccc;
+    background-color: #004406;
     border-radius: 8px;
     text-align: center;
     color: #ffffff;
@@ -44,4 +49,7 @@ img {
     float: right;
     margin-top: -60px;
     margin-right: 30px;
+}
+.textDate{
+    color: yellow;
 }
