--- a/lesson3/css/large.css
+++ b/lesson3/css/large.css
@@ -1,6 +1,7 @@
 @media only screen and (min-width: 60em) {
-	main {
-		grid-template-columns: 1fr 1fr 1fr;
+	nav ul{
+		display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr ;
 	}
 
 
