--- a/lesson3/css/medium.css
+++ b/lesson3/css/medium.css
@@ -4,12 +4,10 @@ h1 {
 }
 h2 {
     font-size: 1.5rem;
+
 }
-header, footer{
-    border-radius: 10px;
- 
-}
-main {
-    grid-template-columns: 1fr 1fr;
+nav ul{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
 }
 }
