--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -8,58 +8,57 @@ accent-color3: #FFAC00
 
 body {
     height: 100%;
-    font-family: 'Montserrat', sans-serif;   
-
+    font-family: 'Montserrat', sans-serif;
 }
 
 nav,
 footer {
     background-color: #282b40;
     text-align: center;
-    color: #F1F2EC;    
+    color: #F1F2EC;
     width: 100%;
 }
 
 main {
     font-family: 'Montserrat', sans-serif;
- 
 }
 
 .top-header {
-    
     text-align: center;
     background-color: #FC6414;
     display: flex;
     align-content: center;
     justify-content: center;
-
 }
-.headings{
+
+.headings {
     display: flex;
     flex-direction: column;
 }
-.headings h1{
+
+.headings h1 {
     margin-bottom: 5px;
     font-size: 1.5rem;
     color: #F1F2EC;
     font-family: 'Shadows Into Light', cursive;
 }
-.motto{
+
+.motto {
     color: #282b40;
     font-size: 0.6rem;
 }
 
 footer a {
     color: #F1F2EC;
- 
 }
-h2 {
 
+h2 {
     font-size: 1rem;
     color: #FC6414;
     font-family: 'Shadows Into Light', cursive;
     text-align: center;
 }
+
 .logo {
     width: 70px;
     box-shadow: none;
@@ -70,13 +69,14 @@ h2 {
     list-style: none;
     margin: 0;
     padding: 0;
+}
 
-}
 .navigation li:first-child {
-	display: block;
+    display: block;
 }
+
 .navigation li {
-	display: none;
+    display: none;
 }
 
 nav li a {
@@ -89,11 +89,12 @@ nav li a {
 nav a:hover {
     color: #282b40;
     background-color: #FFAC00;
+}
 
-}
 .responsive li {
-	display: block;
+    display: block;
 }
+
 .color-h2 {
     color: #FC6414;
     font-size: 1rem;
@@ -103,7 +104,6 @@ nav a:hover {
     color: #F1F2EC;
     background-color: #FC6414;
     font-size: 2rem;
-
 }
 
 .color-nav {
@@ -118,14 +118,16 @@ nav a:hover {
 
 
 /* The hero image */
-.herodiv {   
+
+.herodiv {
     background: url('../images/hero-image.jpg') center center no-repeat;
     background-size: cover;
     width: 100%;
     height: 25vh;
-    overflow: hidden;  
-  }
-  .summary {
+    overflow: hidden;
+}
+
+.summary {
     position: absolute;
     top: 15px;
     left: 30px;
@@ -137,77 +139,90 @@ nav a:hover {
     display: grid;
     font-size: 0.7rem;
     grid-template-columns: 1fr 1fr;
-    color: #282b40 ;
+    color: #282b40;
 }
-.summary-data{
+
+.summary-data {
     text-align: right;
 }
-.summary-titles{
+
+.summary-titles {
     font-weight: bold;
 }
 
-  .herodiv {margin: 10px auto;position: relative;}
+.herodiv {
+    margin: 10px auto;
+    position: relative;
+}
 
-  .forecast , .forecastTitle , .map{
-	display: none;
- }
+.forecast,
+.forecastTitle,
+.map {
+    display: none;
+}
 
 .col {
-	flex: 1 1 100%;
-	background-color: #F1F2EC;
-	font-size: 13px;
+    flex: 1 1 100%;
+    background-color: #F1F2EC;
+    font-size: 13px;
     text-align: center;
     border-top: 1px solid #282b40;
-	border-bottom: 1px solid #282b40;
-	border-left: 1px solid #282b40;
+    border-bottom: 1px solid #282b40;
+    border-left: 1px solid #282b40;
 }
+
 .forecast div:last-child {
-	border-right: 1px solid #282b40;
+    border-right: 1px solid #282b40;
 }
+
 .label {
-	display: block;
-	padding: 5px;
-	font-weight: 700;
-	font-size: 15px;
+    display: block;
+    padding: 5px;
+    font-weight: 700;
+    font-size: 15px;
     background-color: #FC6414;
     color: #F1F2EC;
 }
+
 .data {
-	display: block;
-	padding: 0 5px 5px;
+    display: block;
+    padding: 0 5px 5px;
 }
 
-.forecast img{
+.forecast img {
     width: 40%;
 }
 
-.article img{
-max-width: 40%;
-float: right;
-margin: 16px;
-box-shadow: 0 6px 3px 0 rgba(5, 5, 5, 0.836), 0 6px 20px 0 rgba(14, 13, 13, 0.521);
+.article img {
+    max-width: 40%;
+    float: right;
+    margin: 16px;
+    box-shadow: 0 6px 3px 0 rgba(5, 5, 5, 0.836), 0 6px 20px 0 rgba(14, 13, 13, 0.521);
 }
- .map img{
+
+.map img {
     max-width: 100%;
     box-shadow: 0 8px 3px 0 rgba(5, 5, 5, 0.836), 0 6px 20px 0 rgba(14, 13, 13, 0.521);
- }
-.map{
+}
+
+.map {
     grid-area: map;
 }
 
-.info{
+.info {
     grid-area: info;
 }
 
-.contact{
+.contact {
     display: grid;
-    grid-template-areas:  "map info";
+    grid-template-areas: "map info";
     justify-items: left;
     column-gap: 1rem;
     background-color: #FFAC00;
     padding: 1rem;
 }
-.contentBox{   
+
+.contentBox {
     list-style-type: none;
     margin: .8rem auto;
     padding: 1rem;
@@ -217,29 +232,29 @@ box-shadow: 0 6px 3px 0 rgba(5, 5, 5, 0.836), 0 6px 20px 0 rgba(14, 13, 13, 0.52
 .info li a {
     text-decoration: none;
     display: block;
-     list-style-type: none;
-
-}
-.info li{
     list-style-type: none;
 }
-.social{
+
+.info li {
+    list-style-type: none;
+}
+
+.social {
     display: grid;
     grid-template-columns: 20px 20px 20px;
     grid-gap: 5px;
-
 }
-.active{
-font-weight: bold;
-text-decoration: underline;
 
+.active {
+    font-weight: bold;
+    text-decoration: underline;
 }
-.active:hover{
+
+.active:hover {
     color: #FC6414;
 }
 
-
-    #message {
+#message {
     background-color: #FFAC00;
     color: #282b40;
     margin: 0;
@@ -247,11 +262,12 @@ text-decoration: underline;
     text-align: center;
     font-size: 1.2rem;
     line-height: 1.4em;
-   
-  }
-  .hide{
-      display: none;
-  }
-  .show{
-      display: block;
-  }
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
+}
