--- a/lesson-9/prophepts.css
+++ b/lesson-9/prophepts.css
@@ -5,16 +5,17 @@ body {
 .cards {
     display: grid;
     grid-template-columns: 1fr;
-    align-content: space-around;
-    justify-items: center;
-    background-color: #F2EFDF;
-    gap: 20px;
-    padding: 35px 0;
+    gap: 10px;
+    background-color: #909ae7;
+    padding: 20px;
 }
 
-main {
-    margin: 0 auto;
-    max-width: 100rem;
+section {
+    background-color: #F2EFDF;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 5px 5px 10px #282b40;
+    border: 2px solid #03318C;
 }
 
 header,
@@ -22,11 +23,11 @@ h2 {
     text-align: center;
     font-family: 'Spartan', cursive;
     color: #03318C;
-    font-size: 1.2rem;
 }
 
 img {
     box-shadow: 5px 20px 50px #282b40;
+    height: 300px;
 }
 
 footer {
@@ -45,33 +46,10 @@ footer a {
     .cards {
         grid-template-columns: 1fr 1fr;
     }
-    main {
-        margin: 0 auto;
-        max-width: 50rem;
-    }
-    header,
-    h2 {
-        font-size: 1.5rem;
-    }
-    body {
-        font-size: 1rem;
-    }
 }
 
 @media only screen and (min-width: 60em) {
     .cards {
         grid-template-columns: 1fr 1fr 1fr 1fr;
-        max-width: 100rem;
-    }
-    main {
-        margin: 0 auto;
-        max-width: 100rem;
-    }
-    header,
-    h2 {
-        font-size: 2rem;
-    }
-    body {
-        font-size: 1rem;
     }
 }
