--- a/lesson-9/prophepts.css
+++ b/lesson-9/prophepts.css
@@ -35,7 +35,7 @@ footer {
     text-align: center;
     color: #F1F2EC;
     width: 100%;
-    padding: 10px;
+    padding: 20px 0px;
 }
 
 footer a {
