--- a/lesson-9/css/medium.css
+++ b/lesson-9/css/medium.css
@@ -25,8 +25,28 @@
         grid-template-columns: 1fr 1fr;
         gap: 20px;
     }
-    main {
-        margin: 0 auto;
-        max-width: 30rem;
+    .herodiv {
+        height: 60vh;
+    }
+    .cards {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .card {
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 10px;
+        width: 100%;
+    }
+    .col1 {
+        flex: 1;
+        padding: 20px;
+    }
+    .col2 {
+        flex: 1;
+        padding: 20px;
+    }
+    .card:nth-child(odd) {
+        flex-direction: row-reverse;
     }
 }
