--- a/lesson-9/css/large.css
+++ b/lesson-9/css/large.css
@@ -12,7 +12,7 @@
     }
     main {
         margin: 0 auto;
-        max-width: 50rem;
+        max-width: 70rem;
     }
     footer {
         margin: 0 auto;
@@ -41,5 +41,21 @@
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 20px;
+    }
+    .cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 10px;
+        padding: 20px;
+        background: #FFAC00;
+    }
+    .card {
+        background-color: #F2EFDF;
+        padding: 10px;
+        text-align: center;
+        box-shadow: 5px 5px 10px #282b40;
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 95%;
     }
 }
