--- a/lesson-9/css/small.css
+++ b/lesson-9/css/small.css
@@ -48,6 +48,13 @@ main {
     font-size: 0.6rem;
 }
 
+.cards .motto {
+    font-style: italic;
+    font-size: 0.8rem;
+    color: #282b40;
+    text-shadow: 1px 1px #FFAC00;
+}
+
 footer a {
     color: #F1F2EC;
 }
@@ -126,14 +133,13 @@ nav a:active {
 
 /* The hero image */
 
-
-/*.herodiv {
-    background: url('../images/hero-image.jpg') center center no-repeat;
+.herodiv {
+    background: url('../images/hero-img.jpg') center center no-repeat;
     background-size: cover;
-    width: 100%;
+    width: 100vw;
     height: 25vh;
     overflow: hidden;
-}*/
+}
 
 .herodiv {
     position: relative;
@@ -147,19 +153,39 @@ nav a:active {
     width: 100%;
 }
 
+.h1-light {
+    background-color: #FC6414;
+    color: #F1F2EC;
+    mix-blend-mode: multiply;
+    font-size: 5vw;
+    font-weight: 700;
+    text-align: center;
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    right: 0;
+    margin: auto;
+    transform: translate(-50%, -50%);
+    overflow-wrap: break-word;
+    border-radius: 8px;
+    box-shadow: 0 0 16px #FC6414, 0 0 32px #FC6414;
+    padding: 16px;
+    font-family: 'Shadows Into Light', cursive;
+}
+
 .summary {
     position: absolute;
-    top: 15px;
-    left: 30px;
-    background: radial-gradient(#F1F2EC, #FC6414);
+    bottom: 15px;
+    right: 30px;
+    background: #FC6414;
     border: 1px solid #FFAC00;
     padding: 1rem;
     box-shadow: 0 0 25px #282b40;
     opacity: 1;
-    display: grid;
     font-size: 0.7rem;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     color: #282b40;
+    border-radius: 5px;
 }
 
 .summary-data {
@@ -214,8 +240,7 @@ nav a:active {
 }
 
 .article img {
-    max-width: 40%;
-    float: right;
+    max-width: 90%;
     margin: 16px;
     box-shadow: 0 6px 3px 0 rgba(5, 5, 5, 0.836), 0 6px 20px 0 rgba(14, 13, 13, 0.521);
 }
@@ -247,6 +272,12 @@ nav a:active {
     margin: .8rem auto;
     padding: 1rem;
     font-size: 0.8rem;
+}
+
+article {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
 }
 
 .info li a {
@@ -307,11 +338,6 @@ nav a:active {
     text-align: center;
     color: #F1F2EC;
     max-width: 300px;
-}
-
-main {
-    margin: 0 auto;
-    max-width: 15rem;
 }
 
 .titles {
@@ -415,4 +441,33 @@ button a {
 
 .respond {
     text-align: center;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    padding: 20px;
+    background: #FFAC00;
+}
+
+.card {
+    background-color: #F2EFDF;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 5px 5px 10px #282b40;
+    display: grid;
+    grid-template-columns: 1fr;
+}
+
+.cards img {
+    width: 100%;
+}
+
+.col1 {
+    padding: 20px;
+}
+
+.col2 {
+    padding: 20px;
 }
